#4327 Add deeplearning extension